# Theater-Control-panel

./: .gitignore  GoogleAppsScriptPatreonProxy.js  GoogleAppsScriptProxy.js  GoogleAppsScriptTwitchProxy.js  GoogleAppsScriptXProxy.js  LICENSE  README.md  control_panel.html  export_writer.lua  package-lock.json  package.json  test.js  test2.js
css/: split_engine.css
js/: bottom.js  split_engine.js
modules/: discord.tcp  html.tcp  patreon.tcp  twitch_api.tcp  twitch_chat.tcp
overlays/: thanks.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  test.rs  test2.rs  test3.rs  test_apply_zoom.rs  test_zoom.rs
